--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@ionic/react": "^6.0.0",
 		"@mui/material": "^5.13.0",
 		"@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.3.4",
+		"axios": "^1.3.4",
 		"ionicons": "^6.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -39,6 +39,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
-		"vite": "^4.4.5"
+		"vite": "^4.4.5",
+		"vite-plugin-pwa": "^0.17.0"
 	}
 }
